Incorrect PrintCompilation message: made not compilable on levels 0 1 2 3 4

XMLWordPrintable

    • b06
    • generic
    • generic

        We have "made not compilable on levels 0 1 2 3 4" PrintCompilation log messages when C2 (not C1) is disabled by compiler command.

        ### Excluding compile: java.io.OutputStreamWriter::write
        made not compilable on levels 0 1 2 3 4 java.io.OutputStreamWriter::write (11 bytes) excluded by CompileCommand

        I believe the correct message would be "made not compilable on level 4".

          1. log.txt
            207 kB
            Boris Ulasevich

              Assignee:
              Boris Ulasevich
              Reporter:
              Boris Ulasevich
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: